-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.455 2009-03-27 01:32:25 remko Exp $
-----------------------------------------------------------------------------------------

2009-03-26	pwessel
	* gmt_support.c:	Exceeded array bounds in GMT_read_cpt for hsv conversion.
	* mgd77/mgd77track.c:	Added -Gt|d<gap> to recognize gaps in tracks based on
				distance or time between successive points.
	
2009-03-26	remko
	* configure.ac:		Now looks automatically for ncdump and f2c to guess the
				home directories of netcdf and f2c. This makes it possible
				to just use --enable-netcdf and --enable-f2c without anything
				else. Or leave them off altogether!
	
2009-03-24	pwessel
	* sph:			Introduce new GMT supplement sph which provide GMT-like
				front-ends for Robert Renka's Fortran SSRFPACK and STRIPACK
				libraries.  They are here translated to C via f2c and requires
				the f2c library and include file to compile and link.
				Tools include sphtriangulate (Delaunay and Voronoi spherical
				diagrams), sphdistance (spherical distances from lines to
				grid nodes using Voronoi partitioning), and spinterpolate
				(spherical gridding in tension).

2009-03-23	pwessel
	* triangulate.c:	New option -Q to generate Voronoi polygon edges.
	* gmt_support.c:	Rely on Shewchuk's triangle function to get Voronoi output.

2009-03-18	pwessel
	* gmt_support.c:	Enabled GMT_intpol to handle NaNs by treating them as segment
				boundaries.
	* gmt_init.c:		New Default setting NAN_RECORDS = skip|pass [skip].
				If "pass" we treat let the programs handle the NaNs; for some
				programs the NaNs in input record will act as indicators of
				data gaps for continuous lines.  If "skip" we report them
				as bad records.  In both cases the records are skipped.
	* mgd77/mgd77manage.c:	Now honors NAN_RECORDS in tables given to -A.

2009-03-18	jluis
	* mgd77/mgd77.c:	Was failing to read Windows terminated ASCII files

2009-03-15	pwessel